Wysiwyg Fields 6.x-1.x-dev, xxxx-xx-xx (Development release)
----------------------------------

- #1096948: Fixed issue when Wysiwyg Field is in a Fieldgroup.
- #1085948: Fixed issue with View Source plugin.
- Improved support for multiple Wysiwyg instances on a single node form.


Wysiwyg Fields 6.x-1.x-alpha2, 2011-03-15
----------------------------------

- #1092834: Fixed issue with hook_nodeapi() not being invoked when using Persistent URLs.
- #1085942: Fixed issue with Filter not being enabled when installing via Drush.
- #1085466: Fixed issue with plugins being defined when field doesn't exist.
- #1081294: Fixed issue with Textareas and Dialog window positioning.
- #1075704: Fixed Icon is_dir() open_basedir restrictions issue.
- #1074408: Fixed issue with Pass-by-reference.
- #1074396: Fixed issue with Textareas in Wysiwyg Fields and Drupal.wysiwyg.activeId.
- Added implementation of hook_requirements().
- Fixed issue with locale and dynamically generated JavaScript files.
- Fixed issue with inserting multiple Node reference fields.
- Improved icon lookup functionality.
- Improved support for 3rd party fields.
- Updated help documentation.
- Updated translation template.
- Removed all deprecated CVS $Id$ strings.


Wysiwyg Fields 6.x-1.0-alpha1, 2011-02-26
----------------------------------

- Initial 6.x release.