@@ -29,6 +29,17 @@ function hook_wysiwyg_fields_elements_alter($elements) {
 }
 
 /**
+ * Implements hook_wysiwyg_fields_field_bypass().
+ */
+function hook_wysiwyg_fields_field_bypass($field) {
+  switch ($field['widget']['module']) {
+    case 'MYMODULE':
+      return TRUE;
+  }
+  return FALSE;
+}
+
+/**
  * Implements hook_wysiwyg_fields_icons().
  */
 function hook_wysiwyg_fields_icons() {
@@ -49,12 +60,17 @@ function hook_wysiwyg_fields_theme_bypass($widget_type) {
 }
 
 /**
- * Implements hook_wysiwyg_fields_widget_bypass().
+ * Implements hook_wysiwyg_fields_wysiwyg_plugins().
  */
-function hook_wysiwyg_fields_widget_bypass($widget) {
-  switch ($widget['module']) {
-    case 'MYMODULE':
-      return TRUE;
+function hook_wysiwyg_fields_wysiwyg_plugins($content_type) {
+  $plugins = array();
+  foreach (content_fields() as $field) {
+    if (!in_array(TRUE, module_invoke_all('wysiwyg_fields_field_bypass', $field)) && !is_null(content_fields($field['field_name'], $content_type)) && isset($field['widget']['wysiwyg_fields_status']) && $field['widget']['wysiwyg_fields_status']) {
+      $plugins[$field['field_name']] = array(
+        'label' => $field['widget']['label'],
+        'icon' => $field['widget']['wysiwyg_fields_icon'],
+      );
+    }
   }
-  return FALSE;
+  return $plugins;
 }
